y.output
Terminals unused in grammar

    ARROW
    RESERVED


State 56 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE classMembers RBRACE

    2 methodDecl: PUBLIC STATIC methodHeader methodBody

    3 fieldDecl: PUBLIC STATIC type IDENTIFIER fieldDeclarations SEMICOLON
    4          | error SEMICOLON

    5 fieldDeclarations: fieldDeclarations COMMA IDENTIFIER
    6                  | ε

    7 type: BOOL
    8     | INT
    9     | DOUBLE

   10 classMembers: classMembers classMember
   11             | ε

   12 classMember: methodDecl
   13            | fieldDecl
   14            | SEMICOLON

   15 methodHeader: type IDENTIFIER LPAR formalParams RPAR
   16             | VOID IDENTIFIER LPAR formalParams RPAR

   17 formalParams: type IDENTIFIER formalParamsList
   18             | STRING LSQ RSQ IDENTIFIER
   19             | ε

   20 formalParamsList: formalParamsList COMMA type IDENTIFIER
   21                 | ε

   22 methodBody: LBRACE methodBodyItems RBRACE

   23 methodBodyItems: methodBodyItems statement
   24                | methodBodyItems varDecl
   25                | ε

   26 varDecl: type IDENTIFIER idList SEMICOLON

   27 idList: idList COMMA IDENTIFIER
   28       | ε

   29 statement: LBRACE statementList RBRACE
   30          | IF LPAR expr RPAR statement
   31          | IF LPAR expr RPAR statement ELSE statement
   32          | WHILE LPAR expr RPAR statement
   33          | RETURN SEMICOLON
   34          | RETURN expr SEMICOLON
   35          | methodInvocation SEMICOLON
   36          | assignmentExpr SEMICOLON
   37          | parseArgs SEMICOLON
   38          | PRINT LPAR expr RPAR SEMICOLON
   39          | PRINT LPAR STRLIT RPAR SEMICOLON
   40          | SEMICOLON
   41          | error SEMICOLON

   42 statementList: statementList statement
   43              | ε

   44 methodInvocation: IDENTIFIER LPAR arguments RPAR
   45                 | IDENTIFIER LPAR error RPAR

   46 arguments: exprList
   47          | ε

   48 exprList: expr
   49         | exprList COMMA expr

   50 assignmentExpr: IDENTIFIER ASSIGN assignmentExpr
   51               | orExpr

   52 parseArgs: PARSEINT LPAR IDENTIFIER LSQ expr RSQ RPAR
   53          | PARSEINT LPAR error RPAR

   54 expr: assignmentExpr

   55 orExpr: orExpr OR andExpr
   56       | andExpr

   57 andExpr: andExpr AND xorExpr
   58        | xorExpr

   59 xorExpr: xorExpr XOR eqExpr
   60        | eqExpr

   61 eqExpr: eqExpr EQ relExpr
   62       | eqExpr NE relExpr
   63       | relExpr

   64 relExpr: relExpr LT shiftExpr
   65        | relExpr LE shiftExpr
   66        | relExpr GT shiftExpr
   67        | relExpr GE shiftExpr
   68        | shiftExpr

   69 shiftExpr: shiftExpr LSHIFT addExpr
   70          | shiftExpr RSHIFT addExpr
   71          | addExpr

   72 addExpr: addExpr PLUS mulExpr
   73        | addExpr MINUS mulExpr
   74        | mulExpr

   75 mulExpr: mulExpr STAR unaryExpr
   76        | mulExpr DIV unaryExpr
   77        | mulExpr MOD unaryExpr
   78        | unaryExpr

   79 unaryExpr: NOT unaryExpr
   80          | MINUS unaryExpr
   81          | PLUS unaryExpr
   82          | primary

   83 primary: LPAR expr RPAR
   84        | LPAR error RPAR
   85        | methodInvocation
   86        | parseArgs
   87        | IDENTIFIER
   88        | IDENTIFIER DOTLENGTH
   89        | NATURAL
   90        | DECIMAL
   91        | BOOLLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 41 45 53 84
    IDENTIFIER <lexeme> (258) 1 3 5 15 16 17 18 20 26 27 44 45 50 52 87 88
    NATURAL <lexeme> (259) 89
    DECIMAL <lexeme> (260) 90
    STRLIT <lexeme> (261) 39
    BOOLLIT <lexeme> (262) 91
    BOOL (263) 7
    INT (264) 8
    DOUBLE (265) 9
    STRING (266) 18
    VOID (267) 16
    CLASS (268) 1
    PUBLIC (269) 2 3
    STATIC (270) 2 3
    RETURN (271) 33 34
    IF (272) 30 31
    ELSE (273) 31
    WHILE (274) 32
    PRINT (275) 38 39
    PARSEINT (276) 52 53
    DOTLENGTH (277) 88
    PLUS (278) 72 81
    MINUS (279) 73 80
    STAR (280) 75
    DIV (281) 76
    MOD (282) 77
    EQ (283) 61
    NE (284) 62
    LT (285) 64
    LE (286) 65
    GT (287) 66
    GE (288) 67
    AND (289) 57
    OR (290) 55
    NOT (291) 79
    XOR (292) 59
    LSHIFT (293) 69
    RSHIFT (294) 70
    ASSIGN (295) 50
    COMMA (296) 5 20 27 49
    SEMICOLON (297) 3 4 14 26 33 34 35 36 37 38 39 40 41
    ARROW (298)
    LBRACE (299) 1 22 29
    RBRACE (300) 1 22 29
    LPAR (301) 15 16 30 31 32 38 39 44 45 52 53 83 84
    RPAR (302) 15 16 30 31 32 38 39 44 45 52 53 83 84
    LSQ (303) 18 52
    RSQ (304) 18 52
    RESERVED (305)
    IFX (306)
    UMINUS (307)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program <node> (54)
        on left: 1
        on right: 0
    methodDecl <node> (55)
        on left: 2
        on right: 12
    fieldDecl <node> (56)
        on left: 3 4
        on right: 13
    fieldDeclarations <node> (57)
        on left: 5 6
        on right: 3 5
    type <node> (58)
        on left: 7 8 9
        on right: 3 15 17 20 26
    classMembers <node> (59)
        on left: 10 11
        on right: 1 10
    classMember <node> (60)
        on left: 12 13 14
        on right: 10
    methodHeader <node> (61)
        on left: 15 16
        on right: 2
    formalParams <node> (62)
        on left: 17 18 19
        on right: 15 16
    formalParamsList <node> (63)
        on left: 20 21
        on right: 17 20
    methodBody <node> (64)
        on left: 22
        on right: 2
    methodBodyItems <node> (65)
        on left: 23 24 25
        on right: 22 23 24
    varDecl <node> (66)
        on left: 26
        on right: 24
    idList <node> (67)
        on left: 27 28
        on right: 26 27
    statement <node> (68)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 23 30 31 32 42
    statementList <node> (69)
        on left: 42 43
        on right: 29 42
    methodInvocation <node> (70)
        on left: 44 45
        on right: 35 85
    arguments <node> (71)
        on left: 46 47
        on right: 44
    exprList <node> (72)
        on left: 48 49
        on right: 46 49
    assignmentExpr <node> (73)
        on left: 50 51
        on right: 36 50 54
    parseArgs <node> (74)
        on left: 52 53
        on right: 37 86
    expr <node> (75)
        on left: 54
        on right: 30 31 32 34 38 48 49 52 83
    orExpr <node> (76)
        on left: 55 56
        on right: 51 55
    andExpr <node> (77)
        on left: 57 58
        on right: 55 56 57
    xorExpr <node> (78)
        on left: 59 60
        on right: 57 58 59
    eqExpr <node> (79)
        on left: 61 62 63
        on right: 59 60 61 62
    relExpr <node> (80)
        on left: 64 65 66 67 68
        on right: 61 62 63 64 65 66 67
    shiftExpr <node> (81)
        on left: 69 70 71
        on right: 64 65 66 67 68 69 70
    addExpr <node> (82)
        on left: 72 73 74
        on right: 69 70 71 72 73
    mulExpr <node> (83)
        on left: 75 76 77 78
        on right: 72 73 74 75 76 77
    unaryExpr <node> (84)
        on left: 79 80 81 82
        on right: 75 76 77 78 79 80 81
    primary <node> (85)
        on left: 83 84 85 86 87 88 89 90 91
        on right: 82


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE classMembers RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE classMembers RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • classMembers RBRACE

    $default  reduce using rule 11 (classMembers)

    classMembers  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE classMembers • RBRACE
   10 classMembers: classMembers • classMember

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    RBRACE     shift, and go to state 10

    methodDecl   go to state 11
    fieldDecl    go to state 12
    classMember  go to state 13


State 7

    4 fieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 14


State 8

    2 methodDecl: PUBLIC • STATIC methodHeader methodBody
    3 fieldDecl: PUBLIC • STATIC type IDENTIFIER fieldDeclarations SEMICOLON

    STATIC  shift, and go to state 15


State 9

   14 classMember: SEMICOLON •

    $default  reduce using rule 14 (classMember)


State 10

    1 program: CLASS IDENTIFIER LBRACE classMembers RBRACE •

    $default  reduce using rule 1 (program)


State 11

   12 classMember: methodDecl •

    $default  reduce using rule 12 (classMember)


State 12

   13 classMember: fieldDecl •

    $default  reduce using rule 13 (classMember)


State 13

   10 classMembers: classMembers classMember •

    $default  reduce using rule 10 (classMembers)


State 14

    4 fieldDecl: error SEMICOLON •

    $default  reduce using rule 4 (fieldDecl)


State 15

    2 methodDecl: PUBLIC STATIC • methodHeader methodBody
    3 fieldDecl: PUBLIC STATIC • type IDENTIFIER fieldDeclarations SEMICOLON

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    VOID    shift, and go to state 19

    type          go to state 20
    methodHeader  go to state 21


State 16

    7 type: BOOL •

    $default  reduce using rule 7 (type)


State 17

    8 type: INT •

    $default  reduce using rule 8 (type)


State 18

    9 type: DOUBLE •

    $default  reduce using rule 9 (type)


State 19

   16 methodHeader: VOID • IDENTIFIER LPAR formalParams RPAR

    IDENTIFIER  shift, and go to state 22


State 20

    3 fieldDecl: PUBLIC STATIC type • IDENTIFIER fieldDeclarations SEMICOLON
   15 methodHeader: type • IDENTIFIER LPAR formalParams RPAR

    IDENTIFIER  shift, and go to state 23


State 21

    2 methodDecl: PUBLIC STATIC methodHeader • methodBody

    LBRACE  shift, and go to state 24

    methodBody  go to state 25


State 22

   16 methodHeader: VOID IDENTIFIER • LPAR formalParams RPAR

    LPAR  shift, and go to state 26


State 23

    3 fieldDecl: PUBLIC STATIC type IDENTIFIER • fieldDeclarations SEMICOLON
   15 methodHeader: type IDENTIFIER • LPAR formalParams RPAR

    LPAR  shift, and go to state 27

    $default  reduce using rule 6 (fieldDeclarations)

    fieldDeclarations  go to state 28


State 24

   22 methodBody: LBRACE • methodBodyItems RBRACE

    $default  reduce using rule 25 (methodBodyItems)

    methodBodyItems  go to state 29


State 25

    2 methodDecl: PUBLIC STATIC methodHeader methodBody •

    $default  reduce using rule 2 (methodDecl)


State 26

   16 methodHeader: VOID IDENTIFIER LPAR • formalParams RPAR

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 30

    $default  reduce using rule 19 (formalParams)

    type          go to state 31
    formalParams  go to state 32


State 27

   15 methodHeader: type IDENTIFIER LPAR • formalParams RPAR

    BOOL    shift, and go to state 16
    INT     shift, and go to state 17
    DOUBLE  shift, and go to state 18
    STRING  shift, and go to state 30

    $default  reduce using rule 19 (formalParams)

    type          go to state 31
    formalParams  go to state 33


State 28

    3 fieldDecl: PUBLIC STATIC type IDENTIFIER fieldDeclarations • SEMICOLON
    5 fieldDeclarations: fieldDeclarations • COMMA IDENTIFIER

    COMMA      shift, and go to state 34
    SEMICOLON  shift, and go to state 35


State 29

   22 methodBody: LBRACE methodBodyItems • RBRACE
   23 methodBodyItems: methodBodyItems • statement
   24                | methodBodyItems • varDecl

    error       shift, and go to state 36
    IDENTIFIER  shift, and go to state 37
    NATURAL     shift, and go to state 38
    DECIMAL     shift, and go to state 39
    BOOLLIT     shift, and go to state 40
    BOOL        shift, and go to state 16
    INT         shift, and go to state 17
    DOUBLE      shift, and go to state 18
    RETURN      shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    PRINT       shift, and go to state 44
    PARSEINT    shift, and go to state 45
    PLUS        shift, and go to state 46
    MINUS       shift, and go to state 47
    NOT         shift, and go to state 48
    SEMICOLON   shift, and go to state 49
    LBRACE      shift, and go to state 50
    RBRACE      shift, and go to state 51
    LPAR        shift, and go to state 52

    type              go to state 53
    varDecl           go to state 54
    statement         go to state 55
    methodInvocation  go to state 56
    assignmentExpr    go to state 57
    parseArgs         go to state 58
    orExpr            go to state 59
    andExpr           go to state 60
    xorExpr           go to state 61
    eqExpr            go to state 62
    relExpr           go to state 63
    shiftExpr         go to state 64
    addExpr           go to state 65
    mulExpr           go to state 66
    unaryExpr         go to state 67
    primary           go to state 68


State 30

   18 formalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 69


State 31

   17 formalParams: type • IDENTIFIER formalParamsList

    IDENTIFIER  shift, and go to state 70


State 32

   16 methodHeader: VOID IDENTIFIER LPAR formalParams • RPAR

    RPAR  shift, and go to state 71


State 33

   15 methodHeader: type IDENTIFIER LPAR formalParams • RPAR

    RPAR  shift, and go to state 72


State 34

    5 fieldDeclarations: fieldDeclarations COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 73


State 35

    3 fieldDecl: PUBLIC STATIC type IDENTIFIER fieldDeclarations SEMICOLON •

    $default  reduce using rule 3 (fieldDecl)


State 36

   41 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 74


State 37

   44 methodInvocation: IDENTIFIER • LPAR arguments RPAR
   45                 | IDENTIFIER • LPAR error RPAR
   50 assignmentExpr: IDENTIFIER • ASSIGN assignmentExpr
   87 primary: IDENTIFIER •
   88        | IDENTIFIER • DOTLENGTH

    DOTLENGTH  shift, and go to state 75
    ASSIGN     shift, and go to state 76
    LPAR       shift, and go to state 77

    $default  reduce using rule 87 (primary)


State 38

   89 primary: NATURAL •

    $default  reduce using rule 89 (primary)


State 39

   90 primary: DECIMAL •

    $default  reduce using rule 90 (primary)


State 40

   91 primary: BOOLLIT •

    $default  reduce using rule 91 (primary)


State 41

   33 statement: RETURN • SEMICOLON
   34          | RETURN • expr SEMICOLON

    IDENTIFIER  shift, and go to state 37
    NATURAL     shift, and go to state 38
    DECIMAL     shift, and go to state 39
    BOOLLIT     shift, and go to state 40
    PARSEINT    shift, and go to state 45
    PLUS        shift, and go to state 46
    MINUS       shift, and go to state 47
    NOT         shift, and go to state 48
    SEMICOLON   shift, and go to state 78
    LPAR        shift, and go to state 52

    methodInvocation  go to state 79
    assignmentExpr    go to state 80
    parseArgs         go to state 81
    expr              go to state 82
    orExpr            go to state 59
    andExpr           go to state 60
    xorExpr           go to state 61
    eqExpr            go to state 62
    relExpr           go to state 63
    shiftExpr         go to state 64
    addExpr           go to state 65
    mulExpr           go to state 66
    unaryExpr         go to state 67
    primary           go to state 68


State 42

   30 statement: IF • LPAR expr RPAR statement
   31          | IF • LPAR expr RPAR statement ELSE statement

    LPAR  shift, and go to state 83


State 43

   32 statement: WHILE • LPAR expr RPAR statement

    LPAR  shift, and go to state 84


State 44

   38 statement: PRINT • LPAR expr RPAR SEMICOLON
   39          | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 85


State 45

   52 parseArgs: PARSEINT • LPAR IDENTIFIER LSQ expr RSQ RPAR
   53          | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 86


State 46

   81 unaryExpr: PLUS • unaryExpr

    IDENTIFIER  shift, and go to state 87
    NATURAL     shift, and go to state 38
    DECIMAL     shift, and go to state 39
    BOOLLIT     shift, and go to state 40
    PARSEINT    shift, and go to state 45
    PLUS        shift, and go to state 46
    MINUS       shift, and go to state 47
    NOT         shift, and go to state 48
    LPAR        shift, and go to state 52

    methodInvocation  go to state 79
    parseArgs         go to state 81
    unaryExpr         go to state 88
    primary           go to state 68


State 47

   80 unaryExpr: MINUS • unaryExpr

    IDENTIFIER  shift, and go to state 87
    NATURAL     shift, and go to state 38
    DECIMAL     shift, and go to state 39
    BOOLLIT     shift, and go to state 40
    PARSEINT    shift, and go to state 45
    PLUS        shift, and go to state 46
    MINUS       shift, and go to state 47
    NOT         shift, and go to state 48
    LPAR        shift, and go to state 52

    methodInvocation  go to state 79
    parseArgs         go to state 81
    unaryExpr         go to state 89
    primary           go to state 68


State 48

   79 unaryExpr: NOT • unaryExpr
